--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "my-app",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "npm install --prefix backend && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "NODE_ENV=production node backend/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Logesh018/billing-inventory-app.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
-  "bugs": {
-    "url": "https://github.com/Logesh018/billing-inventory-app/issues"
-  },
-  "homepage": "https://github.com/Logesh018/billing-inventory-app#readme"
+	"name": "my-app",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"build": "npm install --prefix backend && npm install --prefix frontend --include=dev && npm run build --prefix frontend",
+		"start": "NODE_ENV=production node backend/index.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Logesh018/billing-inventory-app.git"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"type": "commonjs",
+	"bugs": {
+		"url": "https://github.com/Logesh018/billing-inventory-app/issues"
+	},
+	"homepage": "https://github.com/Logesh018/billing-inventory-app#readme"
 }
